hotfix: payment swagger
