# cmd/api/docs/swagger.json
@@ -172,48 +172,7 @@
                 }
             }
         },
-        "/orders/sorted": {
-            "get": {
-                "description": "Get Order from DB",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "order"
-                ],
-                "summary": "get all order",
-                "responses": {
-                    "200": {
-                        "description": "Order",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/github_com_Pos-Tech-Challenge-48_delivery-api_internal_entities.Order"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "invalid document",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "customer not find",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "general error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/payment": {
+        "/orders/:order_id/payment": {
             "post": {
                 "description": "save Payment in DB",
                 "produces": [
@@ -224,6 +183,13 @@
                 ],
                 "summary": "create payment",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Order ID",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Payment",
                         "name": "Payment",
@@ -253,7 +219,7 @@
                 }
             }
         },
-        "/payment/webhook": {
+        "/orders/:order_id/payment/webhook": {
             "post": {
                 "description": "update payment and set paid in DB",
                 "produces": [
@@ -278,6 +244,47 @@
                     },
                     "400": {
                         "description": "invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "general error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/sorted": {
+            "get": {
+                "description": "Get Order from DB",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "order"
+                ],
+                "summary": "get all order",
+                "responses": {
+                    "200": {
+                        "description": "Order",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_Pos-Tech-Challenge-48_delivery-api_internal_entities.Order"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid document",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "customer not find",
                         "schema": {
                             "type": "string"
                         }
